--- a/gb/20/9/22/n12421861.md
+++ b/gb/20/9/22/n12421861.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zkouno3802/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/zkouno3802/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/zkouno3802/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zkouno3802/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zkouno3802/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zkouno3802/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zkouno3802/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zkouno3802/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>上海74岁法轮功学员林秋芃被构陷到检察院</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/2020-7-14-ling-qiu-fan_01-560x400.jpg" />
 <h6>近日，上海闵行区74岁的法轮功学员林秋芃被构陷到法院。（明慧网）
 </h6>
 <hr>
-	<p>【大纪元2020年09月22日讯】9月份，仍被<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E9%9D%9E%E6%B3%95%E5%85%B3%E6%8A%BC.md#1">非法关押</a>的上海闵行区74岁的法轮功学员<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E6%9E%97%E7%A7%8B%E8%8A%83.md#1">林秋芃</a>被构陷到上海市长宁区检察院；广东省广州市天河区法轮功学员<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E6%96%B9%E4%BC%9F%E9%9B%84.md#1">方伟雄</a>、<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E7%BF%81%E5%BA%86%E5%BF%A0.md#1">翁庆忠</a>被构陷到海珠区法院。</p>
-<p>明慧网报导，2020年5月29日，上海市长宁区国保大队8个便衣警察闯到<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E6%9E%97%E7%A7%8B%E8%8A%83.md#1">林秋芃</a>家，在没有出示任何证件的情况下，将林秋芃绑架。林秋芃被<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E9%9D%9E%E6%B3%95%E5%85%B3%E6%8A%BC.md#1">非法关押</a>一周左右，她的家人才收到一份公安邮寄来的非法拘留证。</p>
+	<p>【大纪元2020年09月22日讯】9月份，仍被<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9D%9E%E6%B3%95%E5%85%B3%E6%8A%BC.md#1">非法关押</a>的上海闵行区74岁的法轮功学员<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9E%97%E7%A7%8B%E8%8A%83.md#1">林秋芃</a>被构陷到上海市长宁区检察院；广东省广州市天河区法轮功学员<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B9%E4%BC%9F%E9%9B%84.md#1">方伟雄</a>、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BF%81%E5%BA%86%E5%BF%A0.md#1">翁庆忠</a>被构陷到海珠区法院。</p>
+<p>明慧网报导，2020年5月29日，上海市长宁区国保大队8个便衣警察闯到<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9E%97%E7%A7%8B%E8%8A%83.md#1">林秋芃</a>家，在没有出示任何证件的情况下，将林秋芃绑架。林秋芃被<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%9D%9E%E6%B3%95%E5%85%B3%E6%8A%BC.md#1">非法关押</a>一周左右，她的家人才收到一份公安邮寄来的非法拘留证。</p>
 <p>7月3日，林秋芃被上海市长宁区检察院非法批捕。</p>
 <p>至今林秋芃被非法关押在上海市长宁区看守所，并于9月4日被构陷到上海市长宁区检察院。</p>
 <p>林秋芃家住上海市闵行区虹井路，她于1998年开始修炼法轮功。</p>
@@ -17,7 +17,7 @@
 <p>2016年1月21日，林秋芃被闵行区国保警察绑架，非法关押迫害了15天。</p>
 <p>据明慧网的信息不完全统计，2020年上半年，中共警察在全国范围内28个省、自治区、直辖市的238个城市抓捕骚扰法轮功学员5,313人。</p>
 <p>今年上半年，中共非法抓捕骚扰65岁以上的老年法轮功学员540人，其中90岁以上6人、80～90岁140人、70～80岁278人、65～70岁116人。他们中被绑架的有356人，年龄最长者90岁；骚扰184人，年龄最长者92岁。</p>
-<h2>广州<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E7%BF%81%E5%BA%86%E5%BF%A0.md#1">翁庆忠</a>、<ahref="https://github.com/zkouno3802/djy/blob/master/gb/tag/%E6%96%B9%E4%BC%9F%E9%9B%84.md#1">方伟雄</a>被构陷到法院</h2>
+<h2>广州<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BF%81%E5%BA%86%E5%BF%A0.md#1">翁庆忠</a>、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%B9%E4%BC%9F%E9%9B%84.md#1">方伟雄</a>被构陷到法院</h2>
 <p>2019年9月，广东省广州市天河区法轮功学员方伟雄、翁庆忠被天河区公安分局国保大队和猎德派出所警察绑架，关押在天河区看守所，目前被构陷到海珠区法院。</p>
 <p>明慧网报导，因怀疑方伟雄散发法轮功真相资料，2019年9月12日下午，广州市天河区公安分局国保大队和猎德派出所警察，来到方伟雄在天河区员村的住所，让房东叫方伟雄开门，方伟雄没有应答房东。警察便改为在他住处的楼上楼下蹲守。</p>
 <p>翁庆忠知道这个消息后，出于对朋友的关心，也出于制止警察犯罪的心愿，给方伟雄发了条手机信息，提醒他：“外面有人要进入你家，注意安全。”</p>
@@ -25,7 +25,7 @@
 <p>2019年10月17日，方伟雄、翁庆忠被天河区检察院非法批捕；12月16日，他们的所谓案子被转到海珠区检察院；2020年1月底，两人被构陷到海珠区法院。</p>
 <p>方伟雄，1965年8月出生，广东揭阳市惠来县人，在广州工作。翁庆忠，1963年2月出生，广东汕头人，在广州工作。</p>
 <p>翁庆忠擅长石头雕塑，他雕刻的狮子、麒麟栩栩如生。修炼前，翁庆忠身体不好，胃溃疡病严重，还抽烟、喝酒、赌博；遇到生意不好时，脾气较暴躁，有时甚至会抄起菜刀和妻子吵架。</p>
-<figure id="attachment_12422743" style="width: 218px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/2020-9-21-weng-qing-zhong_01.jpg"><img class="wp-image-12422743 size-full" src="https://i.epochtimes.com/assets/uploads/2020/09/2020-9-21-weng-qing-zhong_01.jpg" alt="" width="218" b="238" /></a><figcaption class="wp-caption-text">翁庆忠（明慧网）</figcaption></figure>
+<figure id="attachment_12422743" aria-describedby="caption-attachment-12422743" style="width: 218px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/2020-9-21-weng-qing-zhong_01.jpg"><img class="wp-image-12422743 size-full" src="https://i.epochtimes.com/assets/uploads/2020/09/2020-9-21-weng-qing-zhong_01.jpg" alt="" width="218" b="238" /></a><figcaption id="caption-attachment-12422743" class="wp-caption-text">翁庆忠（明慧网）</figcaption></figure>
 <p>2006年他修炼法轮功后，不到一年的时间，胃溃疡病痊愈，从此再没有吃过一片药。同时他戒烟、戒酒、戒赌，脾气变好了，人变得非常和善。</p>
 <p>仅因为给朋友发了一条提醒信息，翁庆忠遭绑架，至今已被非法关押一年。</p>
 <p>目前广州市法轮功学员被构陷的案子大部分在海珠区法院被庭审。海珠区法院组建了至少七个合议庭，专门用于迫害法轮功。每个合议庭由一名审判长、一名主审法官和一名陪审员组成。</p>
@@ -36,42 +36,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/19/12/26/n11746496.md#1">九位老人一起读法轮功著作 被构陷到检察院</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/3/1/n11907214.md#1">四川七名法轮功学员及家属被构陷到法院</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/3/18/n11949699.md#1">武汉法轮功学员邹双武吴桂菊被构陷到法院</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/3/19/n11955363.md#1">长沙法轮功学员刘富纯杨文被构陷到法院</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/12/26/n11746496.md#1">九位老人一起读法轮功著作 被构陷到检察院</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/1/n11907214.md#1">四川七名法轮功学员及家属被构陷到法院</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/18/n11949699.md#1">武汉法轮功学员邹双武吴桂菊被构陷到法院</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/19/n11955363.md#1">长沙法轮功学员刘富纯杨文被构陷到法院</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/3/n9919603.md#1" target="_blank">王江火：“抗美援朝”不具备正义性</a></li><li><a href="https://github.com/zkouno3802/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/6/n7526736.md#1" target="_blank">绝处逢生 令药学业同行目瞪口呆的神迹</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/8/n11031942.md#1" target="_blank">传奇总统里根（8）：向中国播撒自由精神</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/3/n11232919.md#1" target="_blank">加拿大温莎市宣布 五月为该市法轮大法月</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/13/n12400103.md#1">【命理】羊刃为何可怕 为何叫凶星恶煞？</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/12/n12397963.md#1">【大时代华人】一根“牙签”背后的爱情</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/13/n12399903.md#1">古今六大预言 2020年前后的大交集(下)</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/15/n12404593.md#1">中国古代神奇的透光镜 会呈现背面图案</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/21/n12420435.md#1">【时事纵横】美中拉锯战 TikTok微信命运未卜</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/22/n12422313.md#1">【重播】川普联合国讲话 对中共发重话</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/21/n12420158.md#1">【有冇搞错】台独始祖是中共</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12416652.md#1">G20大阪峰会习近平遇尴尬 视频再度热传</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/17/n12411129.md#1">中美芯片数据对比 告诉你竞争的现实</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12417511.md#1">中共又“辟谣”银行挤兑事件 自曝金融危机</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/21/n12419241.md#1">黄鸿升灵堂开放最终日 林俊杰等艺人到场悼念</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/21/n12419394.md#1">吴宗宪写歌忆黄鸿升 泪唱去天堂行李带够吗</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/19/n12416205.md#1">全球疫情仍凶险 唐绮阳：感恩台湾如诺亚方舟</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12416699.md#1">子瑜中秋假期回不了台湾 与Elkie相约吃月饼</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12417573.md#1">共军模拟炸关岛基地 视频被揭盗用三部美国片</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/21/n12419160.md#1">中共称新手驾歼-20击落17架敌机 印媒：宣传</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12416956.md#1">印度边境秘密部队多由藏人组成 原因为何？</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/4/n12381760.md#1">【线上活动】远离骨折 骨质疏松！保骨大作战</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/16/n12406419.md#1">增肌除了蛋白质 一定要吃糖类！怎样吃最有效</a></li>
-<li><a href="https://github.com/zkouno3802/djy/blob/master/gb/20/9/20/n12416698.md#1">中国5名“外包杀手” 获搞笑诺贝尔奖</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942593.md#1">【疫情透视】港抗疫显奇迹 天灭中共成保命符</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945338.md#1">外国疫情已失控？小粉红煽动回国被恶搞</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zkouno3802/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zkouno3802/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/22/n12421861.htm">上海74岁法轮功学员林秋芃被构陷到检察院</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/22/n12421861.htm">上海74岁法轮功学员林秋芃被构陷到检察院</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zkouno3802/djy/blob/master/gb/20/9/22/n12421861.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zkouno3802/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zkouno3802/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zkouno3802/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zkouno3802/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zkouno3802/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/9/22/n12421861.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
